openshift/securing-config/authentication-policy-allow-wait-drain.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "allow-wait-for-drain"
  namespace: "tenant-1"
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            ports:
              - "8022"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "allow-wait-for-drain"
  namespace: "tenant-2"
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            ports:
              - "8022"
---
