openshift/securing-config/authentication-policy-tenant-1.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-traffic-to-tenant-1
  namespace: tenant-1
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["tenant-1", "knative-serving", "istio-system"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "allow-wait-for-drain"
  namespace: "tenant-1"
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            ports:
              - "8022"
---
