openshift/securing-config/serving-allow-traffic-to-autoscaler.yaml
# https://github.com/openshift-knative/knative-istio-authz-chart/blob/main/setup/allow-traffic-to-autoscaler.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-traffic-to-autoscaler
  namespace: knative-serving
spec:
  selector:
    matchLabels:
      app: autoscaler
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: [ "knative-serving" ]
