openshift/securing-config/tenant-2-from-helm.yaml
---
# Source: knative-istio-authz-onboarding/templates/common-allow-knative-to-ns.yaml
# Allow namespace tenant-2 to receive requests from Knative system components, from istio-system and from all namespaces of the tenant.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-knative-and-istio
  namespace: tenant-2
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - "tenant-2"
              - "knative-serving"
              - "istio-system"
---
# Source: knative-istio-authz-onboarding/templates/common-allow-via-knative-serving.yaml
# Allow activator to receive requests from workloads and resources in tenant-2.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-tenant-2-to-activator
  namespace: knative-serving
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: "activator"
  rules:
    # Allow to receive requests for Knative services in tenant-2
    - from:
        - source:
            namespaces:
              - "tenant-2"
      to:
        - operation:
            hosts:
              - "*.tenant-2.svc.cluster.local"
---
# Source: knative-istio-authz-onboarding/templates/serving-allow-wait-for-drain.yaml
# Allow kubernetes to call the PreStopHook to wait for draining on port 8022 in tenant-2
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "allow-wait-for-drain"
  namespace: "tenant-2"
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            ports:
              - "8022"
